@@ -1,12 +1,13 @@
 PostGIS 1.0.3
 ????/??/??
+	- Severe bugfix in lwgeom's 2d bounding box computation
 	- Bugfix in WKT (-w) POINT handling in loader
 	- Bugfix in dumper on 64bit machines
 	- Bugfix in dumper handling of user-defined queries 
 	- Bugfix in create_undef.pl script
 	- Small performance improvement in canonical input function
 	- Minor cleanups in loader
-	- Severe bugfix in lwgeom's 2d bounding box computation
+	- Support for multibyte field names in loader
 
 PostGIS 1.0.2
 2005/07/04
